<resources>
    <string name="app_name">Refresh</string>
    <string name="title_layouts">Layouts</string>
    <string name="title_cards">Cards</string>
    <string name="title_routines">Routines</string>
    <string name="title_cards_create">Add Card</string>
    <string name="title_cards_info">Cards Info</string>
    <string name="title_cards_update">Edit Card</string>
    <string name="update">Update</string>
    <string name="discard">Discard</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="extra">Extra (Optional)</string>
    <string name="title_layouts_create">Add Layout</string>
    <string name="title_layouts_info">Layout Info</string>
    <string name="title_layouts_update">Edit Layout</string>
    <string name="search">Search</string>
    <string name="title_layouts_search">Search Layouts</string>
    <string name="add">Add</string>
    <string name="answer">Answer</string>
    <string name="routine_name">Routine Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_layouts">Select Layouts</string>
    <string name="layout_name">Layout Name</string>
    <string name="title_routine_info">Routine Info</string>
    <string name="routine_completed">Routine completed</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="reset">Reset</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="delete">Delete</string>
    <string name="change_question">Change Question</string>
    <string name="separator">‧</string>
    <string name="count">Cards</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_login">Login</string>
    <string name="login_to_signup">Not registered yet? Sign up here</string>
    <string name="title_signup">Sign Up</string>
    <string name="create_an_account">Create an account.</string>
    <string name="signup_to_login">Already have an account? Login here</string>
    <string name="signup">Sign Up</string>
    <string name="login_to_continue">Login to continue.</string>
    <string name="login">Login</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <plurals name="layoutsSelected">
        <item quantity="one">%d layout selected</item>
        <item quantity="other">%d layouts selected</item>
    </plurals>
</resources>
