<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item android:id="@+id/action_add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item android:id="@+id/action_sign_out"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

    <item android:id="@+id/action_delete_account"
        android:title="@string/delete_account"
        app:showAsAction="never"/>
</menu>