<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    tools:context=".ui.user.login.UserLoginFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userLoginAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:text="@string/app_name"
        tools:text="Refresh" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userLoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/userLoginAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:text="@string/login_to_continue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userLoginUserNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:startIconDrawable="@drawable/ic_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLoginText"
        app:layout_constraintVertical_bias="0.1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userLoginPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLoginUserNameLayout"
        app:layout_constraintVertical_bias="0.03">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLoginPasswordLayout"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userLoginSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userLoginButton"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/login_to_signup" />
</androidx.constraintlayout.widget.ConstraintLayout>