<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    tools:context=".ui.user.signup.UserSignupFragment">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userSignupAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"
        android:text="@string/app_name"
        tools:text="Refresh" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userSignupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/userSignupAppName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:text="@string/create_an_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userSignupUserNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:startIconDrawable="@drawable/ic_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSignupText"
        app:layout_constraintVertical_bias="0.1">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userSignupUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fadingEdge="horizontal|vertical"
            android:fadingEdgeLength="10dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userSignupPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSignupUserNameLayout"
        app:layout_constraintVertical_bias="0.03">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/userSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSignupPasswordLayout"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/signup" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userSignupLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSignupButton"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/signup_to_login" />
</androidx.constraintlayout.widget.ConstraintLayout>